--- a/renderer/components/IncomeExpenseChart/IncomeExpenseChart.module.scss
+++ b/renderer/components/IncomeExpenseChart/IncomeExpenseChart.module.scss
@@ -9,7 +9,9 @@
     .row {
         display: flex;
         margin: 0.5rem 0;
-        justify-content: space-around;
+        flex-direction: column;
+        justify-content: center;
+        align-self: center;
         gap: 0.5rem;
         flex: 1;
         .box {
@@ -17,8 +19,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 380px;
-            height: 250px;
+            width: 900px;
+            // height: 250px;
             padding: 1rem;
             overflow: hidden;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -42,7 +44,7 @@
                 &_donut {
                     display: flex;
                     align-self: center;
-                    width: 230px;
+                    width: 400px;
                 }
             }
         }
