--- a/renderer/pages/HomePage/HomePage.module.scss
+++ b/renderer/pages/HomePage/HomePage.module.scss
@@ -12,24 +12,43 @@
         // justify-content: center;
         flex-direction: column;
         width: 100%;
-        .header {
-            position: sticky;
-            z-index: 999;
-            top: 0;
-            width: 100%;
-            padding: 0.5rem 0;
-            display: flex;
-            justify-content: right;
-            .text {
-                font-size: $h5FontSize;
-                font-weight: $h3FontWeight;
-                background-color: rgb(32, 32, 32);
-                color: grey;
-                border-bottom-left-radius: 1rem;
-                border-top-left-radius: 1rem;
-                padding: 1rem;
-                box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-            }
-        }
+    }
+}
+
+.header {
+    position: sticky;
+    z-index: 999;
+    top: 0;
+    width: 100%;
+    padding: 0.5rem 0;
+    display: flex;
+    justify-content: right;
+    .text {
+        font-size: $h5FontSize;
+        font-weight: $h3FontWeight;
+        background-color: rgb(32, 32, 32);
+        color: grey;
+        border-bottom-left-radius: 1rem;
+        border-top-left-radius: 1rem;
+        padding: 1rem;
+        box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    }
+}
+
+.home-page{
+    display: flex;
+    margin-left: 20rem;
+    &__contents{
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        align-items: center;
+    }
+    
+    &__date-section{
+        width: 900px;
+        display: flex;
+        gap: 1rem;
+        align-items: center;
     }
 }
